# CIPHER

./: .gitignore  CRACK_SEGMENTATION.md  PYTHON_3.12.0.md  QUALCOMM_EXPORT.md  VISION_AND_CRACK_INTEGRATION.md  pyproject.toml  test_crack_detection.py
Drone/agents/: VIDEO_ANALYSIS_FEATURES.md  agents.py  app.py  query_parser.py  video_analysis_agent.py  video_analyzer.py
Drone/agents_old/: agents.py
Drone/frontend/src/: App.tsx
Drone/frontend/src/routes/: AgentPage.tsx  AutomaticPage.tsx  ManualPage.tsx
Drone/local_backend/: README.md  SETUP_NPU.md  agent_runner.py  app.py  requirements_npu.txt  video_analysis_agent.py  video_analyze.py
Drone/ml-depth-pro/: pyproject.toml
backend/: config.py  ort_providers.py  perception.py
crack_detection/: __init__.py  config.py  detector.py  download_model.py
docs/: GAMMA_PRESENTATION_SCRIPT.md
scripts/: download_model_crack_seg.py  download_model_qualcomm_seg.py  install_onnxruntime_qnn.ps1  run_vision_with_crack.bat  run_vision_with_crack.sh  setup_crack_model.sh
